--- a/link_bio/requirements.txt
+++ b/link_bio/requirements.txt
@@ -1,9 +1,19 @@
+alembic==1.13.3
+annotated-types==0.7.0
+anyio==4.6.0
 apturl==0.5.2
+async-timeout==4.0.3
+attrs==24.2.0
 bcrypt==3.2.0
+bidict==0.23.1
 blinker==1.4
 Brlapi==0.8.3
+build==1.2.2
+certifi==2024.8.30
 chardet==4.0.0
+charset-normalizer==3.3.2
 cliapp==1.20180812.1
+click==8.0.3
 cmdtest==0.32+git
 colorama==0.4.4
 command-not-found==0.3
@@ -11,53 +21,129 @@ cryptography==3.4.8
 cupshelpers==1.0
 dbus-python==1.2.18
 defer==1.0.6
+dill==0.3.9
+distlib==0.3.8
+distro==1.9.0
 distro-info==1.1+ubuntu0.2
+docutils==0.21.2
 duplicity==0.8.21
+exceptiongroup==1.2.2
+fastapi==0.115.0
 fasteners==0.14.1
+filelock==3.14.0
 future==0.18.2
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.5
+httplib2==0.20.2
+httpx==0.27.2
+idna==3.3
+importlib-metadata==4.6.4
 jeepney==0.7.1
+Jinja2==3.1.4
+keyring==23.5.0
 language-selector==0.1
 launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy_loader==0.4
 lockfile==0.12.2
 louis==3.20.0
 macaroonbakery==1.3.1
+Mako==1.1.3
 Markdown==3.3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+mdurl==0.1.2
 monotonic==1.6
 more-itertools==8.10.0
 netifaces==0.11.0
+nh3==0.2.18
 oauthlib==3.2.0
 olefile==0.46
+outcome==1.3.0.post0
+packaging==24.1
 paramiko==2.9.3
 pexpect==4.8.0
 Pillow==9.0.1
+pipdeptree==2.16.2
 pipenv==2023.12.1
+pkginfo==1.10.0
+platformdirs==4.2.2
 powerline-status==2.8.2
 protobuf==3.12.4
+psutil==6.0.0
 ptyprocess==0.7.0
+pycairo==1.20.1
 pycups==2.0.1
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
 PyGObject==3.42.1
 PyJWT==2.3.0
 pymacaroons==0.13.0
 PyNaCl==1.5.0
+pyparsing==2.4.7
+pyproject_hooks==1.2.0
 pyRFC3339==1.1
+PySocks==1.7.1
 python-apt==2.4.0+ubuntu4
+python-dateutil==2.8.1
 python-debian==0.1.43+ubuntu1.1
+python-engineio==4.9.1
+python-multipart==0.0.12
+python-socketio==5.11.4
 pytz==2022.1
 pyxdg==0.27
 PyYAML==5.4.1
+readme_renderer==44.0
+redis==5.1.0
+reflex==0.6.0
+reflex-chakra==0.6.0
+reflex-hosting-cli==0.1.13
 reportlab==3.6.8
+requests==2.25.1
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.8.1
 SecretStorage==3.3.1
+selenium==4.25.0
+shellingham==1.5.4
+simple-websocket==1.0.0
+six==1.16.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+SQLAlchemy==2.0.35
+sqlmodel==0.0.22
 ssh-import-id==5.11
+starlette==0.38.6
+starlette-admin==0.14.1
 systemd-python==234
+tabulate==0.9.0
+tomli==2.0.1
+tomlkit==0.13.2
+trio==0.27.0
+trio-websocket==0.11.1
 ttystatus==0.38
+twine==5.1.1
+typer==0.12.5
+typing_extensions==4.12.2
 ubuntu-drivers-common==0.0.0
 ubuntu-pro-client==8001
 ufw==0.36.1
 unattended-upgrades==0.1
+urllib3==1.26.5
 usb-creator==0.3.7
+uvicorn==0.31.0
 vboxapi==1.0
+virtualenv==20.26.2
 virtualenv-clone==0.3.0
 wadllib==1.3.6
+websocket-client==1.8.0
+websockets==13.1
+wrapt==1.16.0
+wsproto==1.2.0
 xdg==5
 xkit==0.0.0
 zipp==1.0.0
